create swagger for detail product
