# docs/swagger.json
@@ -113,6 +113,39 @@
                 }
             }
         },
+        "/products/detail/{id}": {
+            "get": {
+                "description": "DetailProduct",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "rest-shoppingcart"
+                ],
+                "summary": "DetailProduct example",
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "Product Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "json"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "AddRegisteredUser",
